<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.swyftlabs.swyftbooks.LoginActivity"
    android:background="@mipmap/androidbackground"
    >

        <TextView
            android:layout_width="match_parent"
            android:text="@string/swyftbooks"
            android:textSize="40sp"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/white"
            android:id="@+id/appTitle"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/emailTextField"
            android:visibility="visible"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textColor="@color/white"
            android:id="@+id/createAccount"
            android:clickable="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_as_guest"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignRight="@id/createAccount"
            android:layout_alignEnd="@id/createAccount"
            android:textColor="@color/white"
            android:id="@+id/continueAsGuest"
            android:clickable="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loginbutton"
            android:id="@+id/loginbutton"
            android:text="@string/login"
            android:textColor="@color/white"
            android:layout_marginBottom="25dp"
            android:layout_above="@+id/createAccount"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:id="@+id/forgotPassword"
            android:gravity="center"
            android:clickable="true"
            android:layout_above="@+id/loginbutton"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/passwordTextField"
            android:inputType="textPassword"
            android:background="@drawable/textfields"
            android:layout_above="@+id/forgotPassword"
            android:layout_marginBottom="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textColor="@color/white"
            android:hint="@string/password"
            android:textColorHint="@color/white"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/emailTextField"
            android:inputType="textEmailAddress"
            android:background="@drawable/textfields"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/passwordTextField"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textColor="@color/white"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            />


</RelativeLayout>
