<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.swyftlabs.swyftbooks1.Activities.CreateAccountActivity"
    android:background="@mipmap/androidbackground">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/swyftbooks"
        android:textSize="35sp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/white"
        android:id="@+id/appTitle"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/emailTextField"
        android:visibility="visible"
        android:layout_marginBottom="5dp"
        />

    <EditText
        android:id="@+id/emailTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textfields"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/passwordField"
        />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textfields"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:layout_above="@+id/confirmPassword"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textfields"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/white"
        android:layout_above="@+id/schoolEditText"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"/>

    <AutoCompleteTextView
        android:id="@+id/schoolEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signUpButton"
        android:layout_marginBottom="10dp"
        android:background="@drawable/textfields"
        android:textColorHint="@color/white"
        android:hint="Enter Your School"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/backToLogin"
        android:layout_marginBottom="10dp"
        android:background="@drawable/loginbutton"
        android:text="Sign up"
        android:textColor="@color/white"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:id="@+id/backToLogin"
        android:clickable="true"/>

</RelativeLayout>
