<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.swyftlabs.swyftbooks.Activities.MainActivity"
    android:background="@mipmap/androidbackground">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="@color/white"
        android:elevation="25dp"
        android:paddingLeft="10dp"
        android:hint="@string/search_hint"
        android:textColorHint="@color/textcolor"
        android:textColor="@color/textcolor"
        tools:targetApi="lollipop"
        android:maxLines="1"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:id="@+id/searchbar"/>


    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/counter"
        android:layout_below="@id/searchbar"
        android:layout_marginTop="10dp"
        android:paddingBottom="8dp"
        android:orientation="horizontal"
        android:id="@+id/searchResults" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/counter"
        tools:text="10/100"
        android:textColor="@color/white"
        android:layout_above="@+id/toolBar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@color/tabbar"
        android:layout_alignParentBottom="true"
        android:id="@+id/toolBar"
        >
        <RelativeLayout
            android:id="@+id/logoutTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:clickable="true"
            >

            <ImageView
                android:id="@+id/logoutimage"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/logouticon"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:layout_below="@id/logoutimage"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:id="@+id/logoutText"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:id="@+id/shareTab"
            android:clickable="true"
            >

            <ImageView
                android:id="@+id/shareimage"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/shareicon"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                android:tint="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textColor="@color/white"
                android:layout_below="@id/shareimage"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:id="@+id/shareText"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:id="@+id/scanTab"
            android:clickable="true"
            >

            <ImageView
                android:id="@+id/scanimage"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/scanicon"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                android:tint="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan"
                android:textColor="@color/white"
                android:layout_below="@id/scanimage"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:id="@+id/scanText"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:id="@+id/historyTab"
            android:clickable="true"
            >

            <ImageView
                android:id="@+id/historyimage"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/historyicon"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                android:tint="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textColor="@color/white"
                android:layout_below="@id/historyimage"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:id="@+id/historyText"/>


        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
